<resources>
    <string name="title_activity_counter">CounterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_one">Add one</string>
    <string name="add_five">Add five</string>
    <string name="double_number">Double</string>
    <string name="triple_number">Triple</string>
    <string name="reset">Reset</string>
    <string name="go_to_main_menu">Go to main menu</string>
</resources>